[tool.poetry]
name = "repl_python3_AnxiousFrozenLock"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
oauth2client = "^4.1.3"
pydrive = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
